--- a/src/Components/compoStyling.css
+++ b/src/Components/compoStyling.css
@@ -61,14 +61,14 @@
 
 /* Home Styling */
 
-.home {
+/* .home {
     display: flex;
-  }
+  } */
 
-  .homeparent{
+  /* .homeparent{
     display: flex;
     margin-top: 20px;
-  }
+  } */
   .homepostfirst{
     flex: 7;
   }
@@ -162,7 +162,7 @@
     width: 65%;
   }
 
-  /* Sidebar */
+  Sidebar
 
 
 
@@ -235,6 +235,43 @@
 
 
   /* Bollywood */
+
+  .bollyparent1{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .bollyparent2{
+    /* flex-wrap: wrap; */
+    display: flex;
+    flex-direction: row;
+  }
+
+
+
+
+
+
+  /* .bollynew{ */
+    /* display:block; */
+   /* flex-direction: column;  */
+  /* } */
+ /* .bollynew1{
+  display:block; */
+   /* display: flex; */
+   /* flex-direction: column; */
+   /* justify-content: space-between; */
+   /* flex-wrap: wrap; */
+   /* flex-direction: column;  */
+
+/* } */
+  /* .bollynew2{
+    
+    
+    display: flex;
+    
+  } */
   .bollymain{
     display: flex;
   }
@@ -361,13 +398,11 @@
       border: 1px white;
       margin-bottom: 20px;
   }
-  .bollyparent{
-    display: flex;
-  }
+  
 
   .blfc{
     /* display: flex; */
-    width: 30%;
+    width: 50%;
     /* text-align: left; */
 
     /* height: 50px;
@@ -529,9 +564,24 @@
     height: 200px;
     width: 300px;
     margin-left: 100px;
-
-    /* display: flex; */
   }
+
+
+
+
+  .imagesizing{
+    height: 180px;
+    width: 450px;
+    border-radius: 15px;
+    margin-top: 20px;
+    margin-right: 30px;
+  }
+
+
+
+
+
+
 
 
   @media only screen and (max-width: 640px) {
